--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,9 @@
 # DataSource settings: set here your own configurations for the database 
 # connection. In this example we have "netgloo_blog" as database name and 
 # "root" as username and password.
-spring.datasource.url = ?????
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.url = jdbc:mysql://us-cdbr-iron-east-04.cleardb.net 
+spring.datasource.username = b126241e64d6b2
+spring.datasource.password = 5d6d945c 
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
